<resources>
    <!-- Title for the application. [CHAR LIMIT=12] -->
    <string name="app_name">Project T</string>

    <!-- Category name for the vocabulary words for numbers [CHAR LIMIT=20] -->
    <string name="category_nearby">Nearby</string>

    <!-- Category name for phrases [CHAR LIMIT=20] -->
    <string name="category_search">Search</string>

    <!-- Category name for the vocabulary words for colors [CHAR LIMIT=20] -->
    <string name="category_category">Category</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_following">Following</string>

    <!-- Category name for the vocabulary words for family members [CHAR LIMIT=20] -->
    <string name="category_settings">Settings</string>

    <string name="category_detailed">Detailed</string>
</resources>
